[gd_scene load_steps=18 format=3 uid="uid://del5wxlj8dfp2"]

[ext_resource type="PackedScene" uid="uid://cjac4nhnkmaup" path="res://Scenes/Characters/Enemies/Boss/CharacterBoss.tscn" id="1_hnewn"]
[ext_resource type="Script" path="res://Scenes/Characters/Enemies/Boss/enemy_boss.gd" id="1_vacrc"]
[ext_resource type="PackedScene" uid="uid://cv3c47mjv611c" path="res://Scenes/Components/take_damage_enemy.tscn" id="2_cdbr8"]
[ext_resource type="PackedScene" uid="uid://b6bek0ab6i4wg" path="res://Scenes/Components/player_detector.tscn" id="3_xht30"]
[ext_resource type="PackedScene" uid="uid://doyksevus16f" path="res://Scenes/Characters/StateMachine/state_machine.tscn" id="4_qtdll"]
[ext_resource type="Script" path="res://Scenes/Characters/StateMachine/Enemy/idle.gd" id="5_2g57x"]
[ext_resource type="PackedScene" uid="uid://825qsxmttfxw" path="res://Scenes/Components/enemy_attacker.tscn" id="5_6lkdv"]
[ext_resource type="Script" path="res://Scenes/Characters/StateMachine/Enemy/attack.gd" id="6_wc482"]
[ext_resource type="Script" path="res://Scenes/Characters/StateMachine/Enemy/dead.gd" id="7_3gr7q"]
[ext_resource type="Script" path="res://Scenes/Characters/StateMachine/Enemy/fall_idle.gd" id="8_3qjn3"]
[ext_resource type="Script" path="res://Scenes/Characters/StateMachine/Enemy/landing.gd" id="9_0fsh7"]
[ext_resource type="Script" path="res://Scenes/Characters/StateMachine/Enemy/take_damage.gd" id="10_7hh7k"]
[ext_resource type="Script" path="res://Scenes/Characters/StateMachine/Enemy/chase.gd" id="11_c655g"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_660sh"]
radius = 0.7

[sub_resource type="BoxShape3D" id="BoxShape3D_df71p"]
size = Vector3(10, 2.76282, 10)

[sub_resource type="BoxShape3D" id="BoxShape3D_ciij6"]
size = Vector3(0.187012, 0.231079, 0.596558)

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_yvcvq"]

[node name="EnemyBoss" type="CharacterBody3D"]
script = ExtResource("1_vacrc")

[node name="visual" type="Node3D" parent="."]

[node name="Enemy" parent="visual" instance=ExtResource("1_hnewn")]

[node name="Skeleton3D" parent="visual/Enemy/Armature_006" index="0"]
bones/0/position = Vector3(0.492243, 8.55726, -88.9385)
bones/0/rotation = Quaternion(-0.612832, -0.0381546, -0.038934, 0.788331)
bones/1/rotation = Quaternion(0.0326207, 0.0482529, -0.0184125, 0.998133)
bones/2/rotation = Quaternion(-0.0241307, 0.0603233, 0.000811668, 0.997887)
bones/3/rotation = Quaternion(0.0627166, 0.0613975, -0.00321129, 0.996136)
bones/4/rotation = Quaternion(0.0165514, -0.0123115, -0.0142836, 0.999685)
bones/6/rotation = Quaternion(-0.035681, -0.127552, 0.106317, 0.985471)
bones/10/rotation = Quaternion(-0.482497, -0.510196, 0.583072, -0.408564)
bones/11/position = Vector3(9.32816e-07, 12.466, -1.20249e-05)
bones/11/rotation = Quaternion(0.463233, 0.0512081, 0.532528, 0.706546)
bones/12/position = Vector3(-4.33875e-07, 27.687, -8.2284e-06)
bones/12/rotation = Quaternion(-2.03939e-08, -1.80808e-07, 0.847091, 0.531448)
bones/13/position = Vector3(1.79541e-06, 27.8948, -5.25553e-06)
bones/13/rotation = Quaternion(-0.228073, -0.182376, 0.200177, 0.935228)
bones/14/position = Vector3(-2.33003, 2.42103, 1.42962)
bones/14/rotation = Quaternion(0.216111, 0.102443, 0.178175, 0.954492)
bones/15/position = Vector3(-1.08515e-05, 4.51394, 1.81973e-05)
bones/15/rotation = Quaternion(0.139706, -0.152534, -0.28001, 0.937448)
bones/16/position = Vector3(7.25584e-06, 5.17868, -9.75252e-06)
bones/16/rotation = Quaternion(0.058573, -0.0359711, -0.571062, 0.818024)
bones/17/position = Vector3(2.38419e-06, 3.13344, -4.17232e-06)
bones/18/position = Vector3(-2.20216, 10.5148, 0.265509)
bones/18/rotation = Quaternion(0.677193, 0.0080963, -0.0900483, 0.73023)
bones/19/position = Vector3(1.74341e-06, 5.54928, -3.33457e-06)
bones/19/rotation = Quaternion(0.856339, -7.39543e-08, -0.102847, 0.506069)
bones/20/position = Vector3(2.91882e-06, 3.39111, 5.85635e-06)
bones/20/rotation = Quaternion(0.803924, -0.015517, -0.107886, 0.584659)
bones/21/position = Vector3(4.26886e-06, 2.59027, -2.54258e-06)
bones/22/position = Vector3(0.0627349, 10.4908, 0.0347358)
bones/22/rotation = Quaternion(0.678266, -0.0420963, -0.125988, 0.722711)
bones/23/position = Vector3(-8.38684e-07, 5.80541, 3.35553e-06)
bones/23/rotation = Quaternion(0.820348, 1.31692e-07, -0.0979231, 0.563418)
bones/24/position = Vector3(6.21719e-08, 3.68201, -2.32831e-08)
bones/24/rotation = Quaternion(0.811792, -6.7513e-05, -0.0969482, 0.575843)
bones/25/position = Vector3(1.28057e-06, 1.99504, 2.28081e-06)
bones/26/position = Vector3(2.3769, 10.2407, 0.0812918)
bones/26/rotation = Quaternion(0.690624, -0.0975037, -0.135563, 0.703672)
bones/27/position = Vector3(7.84995e-06, 5.41893, 1.54675e-05)
bones/27/rotation = Quaternion(0.802975, -9.62667e-07, -0.0952129, 0.588358)
bones/28/position = Vector3(7.04223e-07, 3.72793, 1.66133e-06)
bones/28/rotation = Quaternion(0.782921, 2.11026e-06, -0.0928341, 0.615156)
bones/29/position = Vector3(-3.93445e-07, 1.68046, -1.20328e-06)
bones/30/position = Vector3(4.4812, 9.82024, 0.245615)
bones/30/rotation = Quaternion(0.712918, -0.179507, -0.181338, 0.653178)
bones/31/position = Vector3(5.6891e-06, 3.68446, -2.16439e-06)
bones/31/rotation = Quaternion(0.759991, 0.0272115, -0.0702956, 0.645548)
bones/32/position = Vector3(-8.28297e-08, 2.8152, -1.80201e-05)
bones/32/rotation = Quaternion(0.877863, 0.0211266, -0.0966413, 0.468583)
bones/33/position = Vector3(1.35469e-06, 2.15327, 4.35859e-06)
bones/34/rotation = Quaternion(0.50669, -0.532187, 0.489214, 0.469799)
bones/35/position = Vector3(-1.0999e-06, 12.466, 1.29863e-05)
bones/35/rotation = Quaternion(0.0237301, 0.300389, -0.594542, 0.745468)
bones/36/position = Vector3(-3.42653e-06, 27.687, 2.04443e-06)
bones/36/rotation = Quaternion(-3.06586e-07, -1.91437e-08, -0.10436, 0.99454)
bones/37/position = Vector3(-3.28038e-06, 27.8948, -3.7604e-06)
bones/37/rotation = Quaternion(0.0581784, -0.0908967, -0.0232005, 0.993889)
bones/38/position = Vector3(2.33004, 2.42099, 1.43)
bones/38/rotation = Quaternion(0.256956, -0.0561428, -0.168709, 0.949926)
bones/39/position = Vector3(4.17405e-06, 4.51408, 2.73353e-06)
bones/39/rotation = Quaternion(0.124167, -0.0402633, 0.316496, 0.93957)
bones/40/position = Vector3(1.51771e-06, 5.17849, -3.16793e-06)
bones/40/rotation = Quaternion(0.180093, 0.0130924, 0.497653, 0.848373)
bones/41/position = Vector3(-6.91414e-06, 3.13385, 1.12057e-05)
bones/42/position = Vector3(2.20218, 10.5148, 0.265988)
bones/42/rotation = Quaternion(0.675584, -0.0183549, 0.101698, 0.730005)
bones/43/position = Vector3(-2.67203e-07, 5.5493, -2.69188e-06)
bones/43/rotation = Quaternion(0.856219, -3.91577e-08, 0.10384, 0.506069)
bones/44/position = Vector3(-3.53923e-06, 3.39109, -2.9286e-06)
bones/44/rotation = Quaternion(0.803786, 0.0155194, 0.108819, 0.584676)
bones/45/position = Vector3(-3.93424e-06, 2.59023, 1.52145e-06)
bones/46/position = Vector3(-0.062742, 10.4908, 0.0349884)
bones/46/rotation = Quaternion(0.678296, 0.0421026, 0.12679, 0.722542)
bones/47/position = Vector3(1.41129e-06, 5.80538, -7.40257e-06)
bones/47/rotation = Quaternion(0.820104, 8.43989e-06, 0.0988702, 0.563608)
bones/48/position = Vector3(-4.52419e-06, 3.68201, 7.0871e-07)
bones/48/rotation = Quaternion(0.811683, 2.5408e-05, 0.0978371, 0.575846)
bones/49/position = Vector3(8.46344e-06, 1.99508, -7.76901e-07)
bones/50/position = Vector3(-2.3769, 10.2407, 0.0819967)
bones/50/rotation = Quaternion(0.704476, 0.109115, 0.12765, 0.689575)
bones/51/position = Vector3(-9.23306e-07, 5.41896, 1.17912e-05)
bones/51/rotation = Quaternion(0.770667, 2.2985e-06, 0.0922905, 0.630519)
bones/52/position = Vector3(-5.46691e-07, 3.72796, 6.14102e-06)
bones/52/rotation = Quaternion(0.78285, -4.52736e-05, 0.0936937, 0.615116)
bones/53/position = Vector3(2.97527e-06, 1.68045, -6.6087e-06)
bones/54/position = Vector3(-4.48119, 9.8202, 0.246004)
bones/54/rotation = Quaternion(0.709027, 0.205435, 0.158118, 0.655802)
bones/55/position = Vector3(-1.08622e-06, 3.68448, -4.12692e-06)
bones/55/rotation = Quaternion(0.757451, 4.6895e-06, 0.0940911, 0.646076)
bones/56/position = Vector3(2.5686e-06, 2.81518, 7.40258e-07)
bones/56/rotation = Quaternion(0.877699, -0.0211205, 0.09766, 0.468681)
bones/57/position = Vector3(3.6167e-06, 2.15328, -2.0226e-06)
bones/58/rotation = Quaternion(0.0416818, 0.432608, 0.898685, -0.0589835)
bones/59/rotation = Quaternion(-0.348167, 0.0891663, 0.00147485, 0.933181)
bones/60/rotation = Quaternion(0.329571, 0.246397, -0.0983698, 0.906088)
bones/61/rotation = Quaternion(0.465191, -0.0200277, 0.0562165, 0.883196)
bones/63/rotation = Quaternion(-0.0930957, -0.105904, 0.98972, 0.0239223)
bones/64/rotation = Quaternion(-0.0831457, 0.019245, -0.0503362, 0.995079)
bones/65/rotation = Quaternion(0.378053, 0.0614886, 0.226908, 0.895437)
bones/66/rotation = Quaternion(0.52294, -0.016837, -0.0715503, 0.849194)

[node name="Components" type="Node3D" parent="visual"]

[node name="TakeDamageEnemy" parent="visual/Components" instance=ExtResource("2_cdbr8")]

[node name="CollisionShape3D" type="CollisionShape3D" parent="visual/Components/TakeDamageEnemy"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.19066, 0)
shape = SubResource("CylinderShape3D_660sh")

[node name="PlayerDetector" parent="visual/Components" instance=ExtResource("3_xht30")]

[node name="CollisionShape3D" type="CollisionShape3D" parent="visual/Components/PlayerDetector"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.59748, 0)
shape = SubResource("BoxShape3D_df71p")

[node name="EnemyAttacker" parent="visual/Components" instance=ExtResource("5_6lkdv")]

[node name="CollisionShape3D" type="CollisionShape3D" parent="visual/Components/EnemyAttacker"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0428327, 1.35643, 0.702427)
shape = SubResource("BoxShape3D_ciij6")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.853066, 0)
shape = SubResource("CapsuleShape3D_yvcvq")

[node name="StateMachine" parent="." node_paths=PackedStringArray("initial_state") instance=ExtResource("4_qtdll")]
initial_state = NodePath("Idle")

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource("5_2g57x")

[node name="attack" type="Node" parent="StateMachine"]
script = ExtResource("6_wc482")

[node name="dead" type="Node" parent="StateMachine"]
script = ExtResource("7_3gr7q")

[node name="fallIdle" type="Node" parent="StateMachine"]
script = ExtResource("8_3qjn3")

[node name="landing" type="Node" parent="StateMachine"]
script = ExtResource("9_0fsh7")

[node name="takeDamage" type="Node" parent="StateMachine"]
script = ExtResource("10_7hh7k")

[node name="chase" type="Node" parent="StateMachine"]
script = ExtResource("11_c655g")

[connection signal="player_detected" from="visual/Components/PlayerDetector" to="." method="_on_player_detector_player_detected"]
[connection signal="player_undetected" from="visual/Components/PlayerDetector" to="." method="_on_player_detector_player_undetected"]
[connection signal="attacking" from="visual/Components/EnemyAttacker" to="." method="_on_enemy_attacker_attacking"]
[connection signal="body_entered" from="visual/Components/EnemyAttacker" to="." method="_on_enemy_attacker_body_entered"]

[editable path="visual/Enemy"]
